# random-practice

./: LICENSE  README.md
authentication_api_practice/: README.md  docker-compose-dev.yaml  justfile  pyproject.toml  start.sh
authentication_api_practice/auth_prac/: deps.py  main.py  utils.py
python_emailer_practice/: LICENSE  README.md  example.env  pyproject.toml
python_emailer_practice/app/: config.py  main.py  utils.py
python_emailer_practice/app/email_templates/: basic.html
