[tool.poetry]
name = "auth-prac"
version = "0.1.0"
description = ""
authors = ["Jakal02 <gitcontribs@eligrubbs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.1"}
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
